clusters/cluster1/core/authentik/authentik-release.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    managed-by: flux
