clusters/cluster1/core/authentik/frigate-outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-outpost
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "frigate.tallflix.ca"
    secretName: frigate-outpost-tls-secret
  rules:
  - host: frigate.tallflix.ca
    http:
      paths:
      - path: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: ak-outpost-authentik-embedded-outpost
            port:
              number: 9000
